dataset1235/2025-2/1153765216/users/1370515670/executions/2372395858_4204267109.log
== RUN (2025-08-28 18:30:34)
-- CODE: 
#ração diaria

peso = input("digite a peso"))
quantidade_diaria = int(input("digite a quantidade diaria" ))
#calculo 

quantidade_racao = quantidade_diaria * 7

#resultado
print(round(quantidade_racao,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:32:19)
-- CODE: 
#ração diaria

peso = input("digite a peso"))
quantidade_diaria = input("digite a quantidade diaria" ))
#calculo 

quantidade_racao = quantidade_diaria * 7

#resultado
print(round(quantidade_racao,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:32:18)
-- CODE: 
#ração diaria

peso = input("digite a peso"))
quantidade_diaria = input("digite a quantidade diaria" ))
#calculo 

quantidade_racao = quantidade_diaria * 7

#resultado
print(round(quantidade_racao,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:30:32)
-- CODE: 
#ração diaria

peso = input("digite a peso"))
quantidade_diaria = int(input("digite a quantidade diaria" ))
#calculo 

quantidade_racao = quantidade_diaria * 7

#resultado
print(round(quantidade_racao,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 3
    peso = input("digite a peso"))
                                 ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:31:24)
-- CODE: 
#ração diaria

peso = input(input("digite a peso"))
quantidade_diaria = int(input("digite a quantidade diaria" ))
#calculo 

quantidade_racao = quantidade_diaria * 7

#resultado
print(round(quantidade_racao,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quantidade_diaria = int(input("digite a quantidade diaria" ))
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quantidade_diaria = int(input("digite a quantidade diaria" ))
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quantidade_diaria = int(input("digite a quantidade diaria" ))
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quantidade_diaria = int(input("digite a quantidade diaria" ))
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quantidade_diaria = int(input("digite a quantidade diaria" ))
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quantidade_diaria = int(input("digite a quantidade diaria" ))
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
